# Picross-

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  cmake_defines.config.hpp  cmake_defines.hpp  list.todo  main.cpp
cli/: cli_command.cpp  cli_command.hpp  cli_input.cpp  cli_input.hpp  cli_menu.cpp  cli_menu.hpp  cli_state.cpp  cli_state.hpp  create_grid_command.hpp  load_grid_command.hpp  modify_grid_command.cpp  picross_cli_state.cpp  picross_cli_state.hpp  save_grid_command.hpp  solve_grid_command.hpp
cli/commands/: command_sequence.cpp  command_sequence.hpp  create_grid_command.cpp  create_grid_command.hpp  load_grid_command.cpp  load_grid_command.hpp  menu_command.cpp  menu_command.hpp  modify_grid_command.cpp  modify_grid_command.hpp  save_grid_command.cpp  save_grid_command.hpp  solve_command.cpp  solve_grid_command.cpp  solve_grid_command.hpp
core/: cell_t.cpp  cell_t.hpp  grid.cpp  grid.hpp  utility.cpp  utility.hpp
core/exceptions/: conflicting_merge_error.cpp  conflicting_merge_error.hpp  invalid_cell_value_error.cpp  invalid_cell_value_error.hpp  invalid_grid_hints_error.cpp  invalid_grid_hints_error.hpp  out_of_bounds_grid_coordinates_error.cpp  out_of_bounds_grid_coordinates_error.hpp  unrecognized_cell_value_error.cpp  unrecognized_cell_value_error.hpp
io/: grid_streams.cpp  grid_streams.hpp  invalid_xml_grid_error.cpp  invalid_xml_grid_error.hpp  text_grid_formatter.cpp  text_grid_formatter.hpp  tinyxml2_error.cpp  tinyxml2_error.hpp  xml_grid_serializer.cpp  xml_grid_serializer.hpp
io/exceptions/: invalid_xml_grid_error.cpp  invalid_xml_grid_error.hpp  tinyxml2_error.cpp  tinyxml2_error.hpp
lib/tinyxml2/: tinyxml2.cpp
picross_cli/: cli_create_grid_command.cpp  cli_create_grid_command.hpp  cli_display_grid_command.cpp  cli_display_grid_command.hpp  cli_load_grid_command.cpp  cli_load_grid_command.hpp  cli_modify_grid_command.cpp  cli_modify_grid_command.hpp  cli_save_grid_command.cpp  cli_save_grid_command.hpp  cli_solve_grid_command.cpp  cli_solve_grid_command.hpp  create_grid_command.cpp  create_grid_command.hpp  load_grid_command.cpp  modify_grid_command.cpp  modify_grid_command.hpp  picross_cli_state.cpp  picross_cli_state.hpp  save_grid_command.cpp  solve_grid_command.cpp  solve_grid_command.hpp
picross_shell/: cell_manip_for_commands.cpp  cell_manip_for_commands.hpp  picross_shell_check_command.cpp  picross_shell_check_command.hpp  picross_shell_clear_command.cpp  picross_shell_clear_command.hpp  picross_shell_commit_command.cpp  picross_shell_commit_command.hpp  picross_shell_cross_command.cpp  picross_shell_cross_command.hpp  picross_shell_display_command.cpp  picross_shell_display_command.hpp  picross_shell_exit_command.cpp  picross_shell_exit_command.hpp  picross_shell_hints_command.cpp  picross_shell_hints_command.hpp  picross_shell_rollback_command.cpp  picross_shell_rollback_command.hpp  picross_shell_state.cpp  picross_shell_state.hpp  shell_check_command.cpp  shell_check_command.hpp  shell_clear_command.cpp  shell_clear_command.hpp  shell_commit_command.cpp  shell_commit_command.hpp  shell_cross_command.cpp  shell_cross_command.hpp  shell_display_command.cpp  shell_display_command.hpp  shell_exit_command.cpp  shell_exit_command.hpp  shell_hint_coherence_command.cpp  shell_hint_coherence_command.hpp  shell_hints_command.cpp  shell_hints_command.hpp  shell_is_solved_command.cpp  shell_is_solved_command.hpp  shell_rollback_command.cpp  shell_rollback_command.hpp
resources/: example_grid1.xml
resources/grids/: 10_10_empty_with_hints.xml  20_20_hints.xml  20_20_solved.xml
resources/tests/core/: 10_10_partial.xml
resources/tests/io/: 10_10_almost_no_hints_formatted_with_hints.txt  10_10_partial_empty.xml  10_10_partial_formatted_no_hints.txt  10_10_partial_formatted_with_hints.txt  20_20_solved_formatted.txt
resources/tests/picross_cli/: 5_10_completed.xml  5_10_hints_only.xml  create_grid_input.txt  load_grid_input.txt  modify_grid_input.txt  modify_grid_output.txt  (+1 more)
solving/: array_analysis.cpp  array_analysis.hpp  iterative_solver.cpp  iterative_solver.hpp  solver.cpp  solver.hpp  utility.cpp  utility.hpp
solving/exceptions/: solving_error.cpp  solving_error.hpp
string/: utility.cpp  utility.hpp
tests/: catch2_custom_generators.hpp  catch2_custom_string_makers.cpp  catch2_custom_string_makers.hpp  custom_generators.hpp  debugging_tools.hpp  generate_static_grids.cpp  generate_static_grids.hpp  main.cpp  template_scenario.hpp  test_core.cpp  test_debugging_utils.cpp  test_debugging_utils.hpp
tests/cli/: test_cli_input.cpp  test_cli_state.cpp  test_picross_cli_state.cpp
tests/core/: test_cell_t.cpp  test_grid.cpp  test_utility.cpp
tests/io/: generate_static_grids.cpp  generate_static_grids.hpp  test_text_grid_formatter.cpp  test_xml_grid_serializer.cpp
tests/picross_cli/: test_create_grid_command.cpp  test_display_grid_command.cpp  test_load_grid_command.cpp  test_modify_grid_command.cpp  test_picross_cli_state.cpp  test_save_grid_command.cpp
tests/picross_shell/: test_check_command.cpp  test_clear_command.cpp  test_commit_command.cpp  test_cross_command.cpp  test_display_command.cpp  test_exit_command.cpp  test_hint_coherence_command.cpp  test_hints_command.cpp  test_is_solved_command.cpp  test_rollback_command.cpp
tests/string/: test_utility.cpp
tests/tools/: test_cli_input.cpp  test_cli_streams.cpp  test_iterable_tools.cpp  test_lambda_maker.cpp  test_string_tools.cpp
tools/: array_2d.hpp  d2_array.hpp  iterable_tools.hpp  lambda_maker.cpp  lambda_maker.hpp  micro_shell.cpp  micro_shell.hpp  micro_shell_codes.hpp  micro_shell_command.hpp  string_tools.cpp  string_tools.hpp
tools/cli/: cli_command.hpp  cli_input.cpp  cli_input.hpp  cli_menu.hpp  command_sequence.hpp  menu_command.hpp
tools/exceptions/: file_not_found_error.cpp  file_not_found_error.hpp  index_out_of_bounds_error.cpp  index_out_of_bounds_error.hpp  range_bounds_exceeded_error.hpp  unmatched_array_size_error.hpp
tools/micro_shell/: micro_shell.cpp  micro_shell.hpp  micro_shell_command.hpp
(+23 files in other folders)
